Clean up /prefs/apps view of OAuth2Scopes
Re-styles the /prefs/apps view of app permissions
so that the new, longer lists of scopes won't overflow.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -7466,7 +7466,7 @@ body:not(.gold) .allminus-link {
     font-size: x-small;
 }
 
-.developed-app.collapsed, .authorized-app { height: 100px; }
+.developed-app.collapsed, .authorized-app { min-height: 100px; }
 .developed-app .collapsed { display: none; }
 
 .developed-app .ajax-upload-form {
@@ -7476,7 +7476,7 @@ body:not(.gold) .allminus-link {
 .app-details {
     display: inline-block;
     width: 200px;
-    height: 72px;
+    min-height: 72px;
     margin-left: 1em;
     vertical-align: top;
 }
