/contact: Add a link to /r/ideasfortheadmins.

--- a/r2/r2/templates/contactus.html
+++ b/r2/r2/templates/contactus.html
@@ -40,6 +40,7 @@ from r2.lib.template_helpers import static
       <h2 class="button">report a bug</h2>
       <ul class="details">
         <li>Check out&#32;<a href="/r/bugs">/r/bugs</a>&#32;for other people with the same problem, or submit your own bug report.</li>
+        <li>If you have an idea for a new feature, tell us about it in&#32;<a href="/r/ideasfortheadmins">/r/ideasfortheadmins</a></li>
       </ul>
     </li>
     <li id="press-enquiry">
@@ -67,6 +68,7 @@ from r2.lib.template_helpers import static
         <li>If you need help on the site or have general site questions, create a text post submission to&#32;<a href="/r/help">/r/help</a>.</li>
         <li>If you got an inappropriate or harrassing PM, click "report" and/or "block user" in the options under the PM.</li>
         <li>We cannot recover your forgotten password, and we do not change or recycle usernames.</li>
+        <li>If you have an idea for a new feature, tell us about it in&#32;<a href="/r/ideasfortheadmins">/r/ideasfortheadmins</a></li>
         <li>If you know you need the admins, you can message them&#32;<a href="/message/compose?to=%2Fr%2Freddit.com">here</a>.</li>
       </ul>
     </li>
