--- a/r2/r2/templates/innertoolbarframe.html
+++ b/r2/r2/templates/innertoolbarframe.html
@@ -32,7 +32,7 @@
          window.location = "${add_sr('/tb/' + thing.link._id36)}"
        }
     </script>
-    ${less_stylesheet(g.stylesheet)}
+    ${less_stylesheet("reddit.less")}
     ${less_js()}
   </head>
   <body class="${'expanded' if thing.expanded else ''}" id="inner_toolbar" onload="window.frames[1].focus()">
