--- a/r2/r2/templates/multiinfobar.html
+++ b/r2/r2/templates/multiinfobar.html
@@ -22,7 +22,7 @@
 
 <%!
    from r2.lib.strings import strings, Score
-   from r2.lib.pages import WrappedUser, ModList, UserText
+   from r2.lib.pages import WrappedUser, UserText
  %>
 
 <%namespace file="utils.html" import="plain_link, thing_timestamp, text_with_links"/>
