--- a/r2/r2/templates/usertableitem.html
+++ b/r2/r2/templates/usertableitem.html
@@ -78,7 +78,7 @@
         ${timesince(thing.rel._date)}
       </span>
   %elif thing.name == "permissions":
-      ${thing.rel}
+      ${thing.permissions}
   %elif thing.name == "permissionsctl":
     %if thing.editable:
       <span class="permissions-edit">
