--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -8231,6 +8231,16 @@ body.with-listing-chooser {
     }
 }
 
+.user-jumped-to {
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    border: 1px solid #DDF;
+    display: inline-block;
+    margin-top: 10px;
+    padding: 10px 15px;
+    background-color: #EEF;
+}
+
 .submit_text {
     display: none;
     max-height: 250px;
