--- a/r2/r2/templates/subredditinfobar.html
+++ b/r2/r2/templates/subredditinfobar.html
@@ -22,7 +22,8 @@
 
 <%!
    from r2.lib.strings import strings, Score
-   from r2.lib.pages import WrappedUser, ModList, SubscribeButton
+   from r2.lib.pages import WrappedUser, SubscribeButton
+   from r2.models.listing import ModListing
  %>
 
 <%namespace file="utils.html" import="plain_link, thing_timestamp, text_with_links"/>
@@ -41,7 +42,7 @@
 
   %if thing.sr.moderator:
     <div class="leavemoderator">
-      ${text_with_links(ModList.remove_self_title % dict(action='(%(action)s)'),
+      ${text_with_links(ModListing.remove_self_title % dict(action='(%(action)s)'),
           _sr_path=True,
           action=dict(
             ## TRANSLATORS: this label links to the edit moderators page.
