CSS Editor: add a gilded comment to the preview samples.
This should make it a little easier to style gilded comments.

As requested by /u/Tiante in http://redd.it/1vw52s.

--- a/r2/r2/templates/subredditstylesheet.html
+++ b/r2/r2/templates/subredditstylesheet.html
@@ -109,6 +109,10 @@
         <th>${_("comment")}</th>
         <td id="preview_comment"></td>
       </tr>
+      <tr>
+        <th>${_("gilded comment")}</th>
+        <td id="preview_comment_gilded"></td>
+      </tr>
     </table>
   </div>
 
