--- a/r2/r2/templates/gold.html
+++ b/r2/r2/templates/gold.html
@@ -64,13 +64,17 @@
 </%def>
 
 <%def name="gold_dropdown(what)">
+  <%!
+    month_options = (1, 3)
+    year_options = (1, 2, 3)
+  %>
   <select name="months" class="gold-dropdown">
-    %for i in range(1, 8):
+    %for i in month_options:
        <option value="${i}">
          ${unsafe(Score.somethings(i, what))}: ${g.gold_month_price * i}
        </option>
     %endfor
-    %for i in range(1, 4):
+    %for i in year_options:
        <option value="${i * 12}" ${"SELECTED" if i == 1 else ""}>
          ${unsafe(Score.somethings(i * 12, what))} &#32; (special price!): ${g.gold_year_price * i}
        </option>
