User lists: highlight row on hover

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -2812,6 +2812,10 @@ li.searchfacet {
     display: inline;
 }
 
+.usertable tr:hover {
+    background-color: #e5efff;
+}
+
 body.rulespage-body {
     overflow-y: scroll;
 }
