Add app 'type' field to app create form
This will allow for differing handling of permissions based
on application type.

* Web app: Web-hosted application. Can keep a client_secret

* Installed app: e.g., android app. Client secret is not so secret
See also: https://developers.google.com/accounts/docs/OAuth2InstalledApp

* Script: For simple scripts and bots. Client secret is assumed secret.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -7553,7 +7553,7 @@ body:not(.gold) .allminus-link {
 .edit-app-icon-button { display: block; text-align: center; width: 72px; }
 .edit-app-form, .edit-app-form form { display: inline-block; }
 .edit-app-form th, .edit-app-icon th { width: 12ex; }
-.edit-app-form input, .edit-app-form textarea { margin: 0px; width: 50ex; }
+.edit-app-form input.text { margin: 0px; width: 50ex; }
 .edit-app-form input[name="name"] { width: 20ex !important; }
 .edit-app-form input[type="file"] { width: auto !important; }
 .edit-app-form input[type="submit"] {
