--- a/r2/r2/templates/allinfobar.html
+++ b/r2/r2/templates/allinfobar.html
@@ -39,7 +39,7 @@
 %endif
 
 %if not thing.gilding_listing:
-<div class="gilded-comments-link">
-  <a href="/r/all/comments/gilded">${_("See gilded comments")}</a>
+<div class="gilded-link">
+  <a href="/r/all/gilded">${_("See gilded comments and submissions")}</a>
 </div>
 %endif
