--- a/r2/r2/templates/comment.html
+++ b/r2/r2/templates/comment.html
@@ -124,15 +124,7 @@ ${parent.collapsed()}
     ${edited(thing, thing.lastedited)}
   %endif
 
-  % if thing.gilded_message:
-  <a href="${thing.subreddit_path}gilded">
-    <span class="gilded-comment-icon" title="${thing.gilded_message}" data-count="${thing.gildings}">
-      % if thing.gildings > 1:
-        x${thing.gildings}
-      % endif
-    </span>
-  </a>
-  % endif
+  ${self.gildings()}
 
   %if collapse:
     &nbsp;<a href="#" class="expand"
