--- a/r2/r2/templates/link.html
+++ b/r2/r2/templates/link.html
@@ -216,6 +216,9 @@ ${parent.thing_data_attributes(what)} data-ups="${what.upvotes}" data-downs="${w
                               author=WrappedUser(thing.author, thing.attribs, thing).render(),
                               lastedited=capture(edited, thing, thing.lastedited)
                               ))}
+  %if c.permalink_page or c.profilepage:
+    ${self.gildings()}
+  %endif
   %if thing.stickied:
     &#32;-&#32;<span class="stickied-tagline" title="selected by this subreddit's moderators">stickied post</span>
   %endif
