--- a/r2/r2/templates/thingupdater.html
+++ b/r2/r2/templates/thingupdater.html
@@ -37,9 +37,9 @@
     $.map(friends, show_friend);
 
     var gildings = ${unsafe(simplejson.dumps(thing.gildings))};
-    for (var gilded_comment in gildings) {
-      var gilding_data = gildings[gilded_comment];
-      r.gold.gildComment(gilded_comment, gilding_data[0], gilding_data[1]);
+    for (var gilded_thing in gildings) {
+      var gilding_data = gildings[gilded_thing];
+      r.gold.gildThing(gilded_thing, gilding_data[0], gilding_data[1]);
     }
 
     var saves = ${unsafe(simplejson.dumps(list(thing.saves)))};
