Gilding form: add reminder message for creddits

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -6521,7 +6521,8 @@ body:not(.gold) .allminus-link {
 }
 
 .gold-form .note {
-    font-size: 11px;
+    font-size: 13px;
+    line-height: 16px;
     font-style: italic;
     color: #222;
     margin-top: 7px;
