--- a/r2/r2/templates/goldpayment.html
+++ b/r2/r2/templates/goldpayment.html
@@ -69,6 +69,7 @@
         ${self.stripe_form()}
       %endif
 
+      <div class="note">${unsafe(safemarkdown(_("Give gold often? Consider [buying creddits to use](/gold?goldtype=creddits), they're 40% cheaper if purchased in a set of 12."), wrap=False))}</div>
       <div class="throbber"></div>
     %endif
     </div>
