Domain Notes:  Keep and display notes for individual domains

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -8307,3 +8307,19 @@ body.with-listing-chooser {
     border-radius: 5px;
     -moz-border-radius: 5px;
 }
+
+#past-notes {
+    overflow-y: auto;
+    max-height: 150px;
+
+    li.adminnote {
+        border-top: 1px solid black;
+        overflow-x: auto;
+    }
+
+    .adminnote-info {
+        text-align: right;
+        font-size: small;
+        font-style: italic;
+    }
+}
