--- a/r2/r2/templates/usertableitem.html
+++ b/r2/r2/templates/usertableitem.html
@@ -24,29 +24,26 @@
 <%namespace file="utils.html" import="plain_link, timestamp"/>
 
 <tr>
-  %for cell in thing.cells:
+  %for cell_type in thing.cells:
     <td>
-      <%
-        thing.name = cell
-       %>
-      ${cell_type()}
+      ${usertablecell(cell_type)}
     </td>
   %endfor
 </tr>
 
-<%def name="cell_type()">
-  %if thing.name == "user":
+<%def name="usertablecell(cell_type)">
+  %if cell_type == "user":
       <span class="user">
          ${plain_link(thing.user.name, "/user/%s/" % thing.user.name,
                       _sr_path=False)}
          &nbsp;(<b>${thing.user.safe_karma}</b>)
       </span>
       &nbsp;
-  %elif c.user_is_loggedin and thing.name == "sendmessage" and c.user != thing.user:
+  %elif c.user_is_loggedin and cell_type == "sendmessage" and c.user != thing.user:
     ${plain_link(_("send message"),
                  "/message/compose?to=%s" % (thing.user.name))}
       &nbsp;
-  %elif thing.name == "remove":
+  %elif cell_type == "remove":
     %if thing.editable:
       ${ynbutton(_("remove"), "removed", thing.remove_action,
                  callback="deleteRow",
@@ -58,7 +55,7 @@
         <span class="gray">${_("can't remove")}</span>
       %endif
     %endif
-  %elif thing.name == "note":
+  %elif cell_type == "note":
     <form action="/post/${thing.type}note" id="${thing.type}note-${thing.rel._fullname}"
           method="post" class="pretty-form medium-text rel-note ${thing.type}-note"
           onsubmit="return post_form(this, '${thing.type}note');">
@@ -69,17 +66,17 @@
       <button onclick="$(this).parent().removeClass('edited')" type="submit">submit</button>
       <span class="status"></span>
     </form>
-  %elif thing.name == "age":
+  %elif cell_type == "age":
       ${timestamp(thing.rel._date, include_tense=True)}
-  %elif thing.name == "permissions":
+  %elif cell_type == "permissions":
       ${thing.permissions}
-  %elif thing.name == "permissionsctl":
+  %elif cell_type == "permissionsctl":
     %if thing.editable:
       <span class="permissions-edit">
         (<a href="javascript:void(0)">${_('change')}</a>)
       </span>
     %endif
-  %elif thing.name == "temp" and hasattr(thing, "tempban"):
+  %elif cell_type == "temp" and hasattr(thing, "tempban"):
     ${_('%(time)s days left') % dict(time=thing.tempban)}
     ${ynbutton(_('make permanent'), _("made permanent"), "friend",
         hidden_data = dict(type=thing.type,
