Password reset: ratelimit by IP

--- a/r2/r2/templates/password.html
+++ b/r2/r2/templates/password.html
@@ -39,6 +39,7 @@
     <input type="text" name="name" />
     ${error_field("USER_DOESNT_EXIST", "name")}
     ${error_field("NO_EMAIL_FOR_USER", "name")}
+    ${error_field("RATELIMIT", "ratelimit")}
   </%utils:round_field>
 </div>
 
