--- a/r2/r2/templates/redditheader.html
+++ b/r2/r2/templates/redditheader.html
@@ -22,7 +22,7 @@
 
 <%!
    from pylons import request
-   from r2.lib.template_helpers import static, media_https_if_secure, add_sr
+   from r2.lib.template_helpers import add_sr, header_url
    from r2.models import Sub, FakeSubreddit
    from r2.models.subreddit import DefaultSR
    from r2.lib.pages import SearchForm
@@ -47,7 +47,7 @@
     %>
     
     % if header_img != g.default_header_url:
-        ${img_link(c.site.name, media_https_if_secure(header_img),
+        ${img_link(c.site.name, header_url(header_img),
             '/', _id="header-img-a", img_id='header-img',
             title=header_title, size=header_size)}
     % else:
