Add styles for "updated" links in footer.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -3214,6 +3214,9 @@ body.rulespage-body {
 
 .bottommenu { color: gray; font-size: smaller; clear: both}
 .bottommenu a { color: gray; text-decoration: underline;   }
+.bottommenu .updated {
+    color: green;
+}
 
 .debuginfo {
     text-align: right;
