Comment: Use CachedVariable for num_children.
This makes it so cached rendered templates are not invalidated
when a comment gets replied to.

--- a/r2/r2/templates/comment.html
+++ b/r2/r2/templates/comment.html
@@ -120,8 +120,7 @@ ${parent.collapsed()}
   %if collapse:
     &nbsp;<a href="#" class="expand"
        onclick="return showcomment(this)">
-       (${thing.num_children} 
-        ${ungettext("child", "children", thing.num_children)})
+       (${thing.numchildren_text})
     </a>
   %endif
   ${self.approval_checkmark()}
