--- a/r2/r2/templates/modlisting.html
+++ b/r2/r2/templates/modlisting.html
@@ -52,6 +52,7 @@
   %if thing.addable and thing.has_add_form:
     <%call expr="add_form(thing.form_title, thing.destination, thing.type, thing.container_name, verb=_('add'))">
       ${error_field("ALREADY_MODERATOR", "name")}
+      ${error_field("BANNED_FROM_SUBREDDIT", "name")}
     </%call>
   %endif
   ${listing()}
