Change wording from "budget" to "total budget" in campaign editor.

--- a/r2/r2/templates/promotelinkform.html
+++ b/r2/r2/templates/promotelinkform.html
@@ -390,7 +390,7 @@ ${self.javascript_setup()}
           </tr>
 
           <tr>
-            <th>${_("budget")}</th>
+            <th>${_("total budget")}</th>
             <td class="prefright">
               ${error_field("BAD_BID", "bid", "div")}
               ${error_field("BID_LIVE", "bid", "div")}
