Remove special styling for promos on profile-page.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -1532,6 +1532,15 @@ body.with-listing-chooser.explore-page #header .pagename {
 .link.promotedlink.finished { background-color: #DDD; }
 #promo-form + form #img-preview-container { display: none; }
 
+.profile-page .link.promotedlink {
+    background-color: white;
+    border: none;
+
+    .sponsored-tagline {
+        display: none;
+    }
+}
+
 .rejection-form textarea { 
     width: 40em;
     height: 10em; 
