Restrict promoted link style removal to saved links.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -1532,7 +1532,7 @@ body.with-listing-chooser.explore-page #header .pagename {
 .link.promotedlink.finished { background-color: #DDD; }
 #promo-form + form #img-preview-container { display: none; }
 
-.profile-page .link.promotedlink {
+.profile-page .link.promotedlink.saved {
     background-color: white;
     border: none;
 
