PromoteLinkForm: remove notes.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -4745,11 +4745,6 @@ ul.tabmenu.formtab {
     border-bottom: none;
 }
 
-.campaign .notes ul {  
-    font-size: x-small;
-    list-style-type: disc; 
-    margin: 0 20px 10px; 
-}
 .existing-campaigns td > button {
     margin: 2px;
     padding: 2px 4px;
@@ -4765,8 +4760,9 @@ ul.tabmenu.formtab {
     text-align: right;
     width: auto;
 }
-.campaign .targeting, .campaign .notes {
-    margin-left: 25px; 
+
+.campaign .targeting {
+    margin-left: 25px;
 }
 .campaign .targeting input{
     width: 95%;
